# ai-zat

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  agent.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/ai_zat/: __init__.py  agent.py  app.py  rag.py
tests/: test_rag.py  test_smoke.py
